welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:24: error: reassignment to val
  					fini = true;
                                             ^