welcome.lessons.welcome.bdr.BDR.scala.code
val fini=0;

if (litMessage() == "R")
{
  droite();
  avance();
  
}
	else if (litMessage() == "L")
	{
 	gauche();
  	avance();
  	
	}

		else if (litMessage() == "I") 
			{
 			 retourne();
  			avance();

			}
				else {
  					fini = true;
					}
